--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yuting Liu (刘禹廷)"
-description              : "Homepage"
+description              : ""
 repository               : "VanillaCreamer/VanillaCreamer.github.io"
 google_scholar_stats_use_cdn : true
 
