--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,13 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
-
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Honors and Awards"
+    url: "/#-honors-and-awards"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Service"
+    url: "/#-Service"
+
+
